# brick-frame

./: .env.example  .gitignore  .treefmt.toml  AGENTS.md  Makefile  THIRD_PARTY_NOTICES  brick-frame.cabal  bricks-generator  bricks.cabal  devenv.nix  gears.ldr  ldraw-sync.lock.json  technic.cabal  test_distance.txt
.github/workflows/: deploy.yml  scheduled.yml
docs/: library-usage.md  physics.md  rendering.md
elm-app/: elm.json  geometry-worker.js  index.html  main.css  main.js  vite.config.mjs  vite.web-components.config.mjs
elm-app/public/: site.webmanifest
elm-app/public/docs/: index.html  index.watch.html
elm-app/public/examples/: gears.io  gears.ldr  smile.ldr  wheeler.ldr
elm-app/public/examples/web-components/: index.html
elm-app/review/src/: LlmAgent  ReviewConfig.elm
elm-app/runtime/: initBricksRuntime.js
elm-app/src/: Main.elm  Ports.elm
elm-app/src/UI/: FileUpload.elm  Theme.elm
elm-app/tests/: SmokeTest.elm
elm-app/web-components/: elements.js  index.js
generator/: Main.hs
ldraw/missing/: README.md  catalog.tsv
pkgs/: npm-tools.nix  package-lock.json  package.json
scripts/: check-missing-ldraw-parts.sh  generate-missing-ldraw-parts.sh  smoke-test.sh  sync-ldraw.sh
src/: Lib.hs
tests/: Main.hs
